webclient: fixed layout bug

--- a/VineyardWebClient/style.css
+++ b/VineyardWebClient/style.css
@@ -410,7 +410,13 @@ main #loading:before {
 .taskissue-all thead .header div { display: flex; justify-content: space-between; }
 .taskissue-all thead tr:last-child th { cursor: pointer; }
 
-.taskissue-all td.status { line-height: 35px; display: flex; align-items: center; justify-content: space-around; }
+.taskissue-all td.status {
+	line-height: 35px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	text-align: center !important;
+}
 
 .mark-as-solved {
 	display: inline-block;
@@ -430,7 +436,6 @@ main #loading:before {
 .taskissue-all tbody tr:hover .mark-as-solved { visibility: visible; }
 
 .priority, .status , .time { font-variant: small-caps; }
-.priority, .status { text-align: center !important; }
 
 .priority.high { color: red; }
 .priority.medium { color: #c79f00; }
@@ -460,7 +465,7 @@ main #loading:before {
 .task-issue thead tr:first-child > * { padding-bottom: 0 !important; }
 .task-issue #changes td { padding-top: 0; padding-bottom: 10px; font-size: 0.7em; padding-left: 17px; }
 .task-issue h3 { padding: 15px; }
-#revisions { max-height: 500px; overflow: auto; }
+#revisions { overflow: auto; }
 #revisions li:nth-child(2n+1) { background-color: #ffdcef; }
 #revisions li.current {
 	background-color: #ccc;
